--- a/next-app/package.json
+++ b/next-app/package.json
@@ -47,6 +47,7 @@
     "cookie": "^1.0.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "next-auth": "^4.24.11",
