--- a/next-app/package.json
+++ b/next-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@aws-sdk/client-s3": "^3.821.0",
     "@next/swc-wasm-nodejs": "^15.1.8",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.11",
