--- a/next-app/package.json
+++ b/next-app/package.json
@@ -49,12 +49,15 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet.locatecontrol": "^0.84.2",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "next-auth": "^4.24.11",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.30",
     "zustand": "^5.0.5"
@@ -62,6 +65,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/leaflet": "^1.9.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
