--- a/next-app/package.json
+++ b/next-app/package.json
@@ -46,7 +46,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cookie": "^1.0.2",
+    "country-flag-icons": "^1.5.19",
     "fs": "^0.0.1-security",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -58,6 +60,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-phone-input-2": "^2.15.1",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.30",
     "zustand": "^5.0.5"
