--- a/next-app/Dockerfile.dev
+++ b/next-app/Dockerfile.dev
@@ -1,12 +1,18 @@
-# Dockerfile.dev
 FROM node:20-alpine
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 
+# ✅ Copiá solo la carpeta prisma antes del generate
+COPY prisma ./prisma
+RUN npx prisma generate
+
+# ✅ Luego copiás el resto del proyecto
 COPY . .
 
 EXPOSE 3000
+VOLUME /app/node_modules
+
 CMD ["npm", "run", "dev"]
