--- a/next-app/package.json
+++ b/next-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@aws-sdk/client-s3": "^3.821.0",
+    "@hookform/resolvers": "^5.1.1",
     "@next/swc-wasm-nodejs": "^15.1.8",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -58,10 +59,11 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-leaflet": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
     "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.30",
+    "zod": "^3.25.56",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
