--- a/next-app/package.json
+++ b/next-app/package.json
@@ -58,6 +58,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-leaflet": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
     "tailwind-merge": "^3.3.0",
