--- a/next-app/package.json
+++ b/next-app/package.json
@@ -63,6 +63,7 @@
     "react-leaflet": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.56",
     "zustand": "^5.0.5"
   },
