--- a/next-app/package.json
+++ b/next-app/package.json
@@ -55,6 +55,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^3.2.0",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet.locatecontrol": "^0.84.2",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
