Se ajustó la lógica para devolver datos de usuarios dentro de un PdE

--- a/next-app/Dockerfile
+++ b/next-app/Dockerfile
@@ -1,16 +1,22 @@
-# Dockerfile
 FROM node:20-alpine AS builder
 
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
+
 COPY . .
+COPY prisma ./prisma
+RUN npx prisma generate
 RUN npm run build
 
+# Producción
 FROM node:20-alpine
 WORKDIR /app
-COPY --from=builder /app ./
-RUN npm install --production
 
+COPY --from=builder /app ./
+
+ENV NODE_ENV=production
 EXPOSE 3000
-CMD ["npm", "start"]
+
+CMD ["npm", "run", "start"]
