--- a/next-app/docker-compose.dev.yml
+++ b/next-app/docker-compose.dev.yml
@@ -1,12 +1,12 @@
-version: "3.8"
-# docker compose -f docker-compose.dev.yml up -d
-services:
-  redis:
-    image: redis:7
-    container_name: dev-redis
-    restart: always
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
-    command: redis-server /usr/local/etc/redis/redis.conf
+# version: "3.8"
+# # docker compose -f docker-compose.dev.yml up -d
+# services:
+#   redis:
+#     image: redis:7
+#     container_name: dev-redis
+#     restart: always
+#     ports:
+#       - "6379:6379"
+#     volumes:
+#       - ./redis.conf:/usr/local/etc/redis/redis.conf
+#     command: redis-server /usr/local/etc/redis/redis.conf
