--- a/next-app/docker-compose.prod.yml
+++ b/next-app/docker-compose.prod.yml
@@ -1,31 +1,59 @@
 version: "3.8"
 
-# docker compose -f docker-compose.prod.yml up -d --build
 services:
+  frontend:
+    container_name: prod-frontend
+    build:
+      context: .
+      dockerfile: Dockerfile.prod
+      args:
+        - DATABASE_URL=${DATABASE_URL}
+        - JWT_SECRET=${JWT_SECRET}
+        - SALT_ROUNDS=${SALT_ROUNDS}
+        - DEFAULT_ROLE_ID=${DEFAULT_ROLE_ID}
+        - MANDRILL_API_KEY=${MANDRILL_API_KEY}
+        - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+        - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+        - AWS_REGION=${AWS_REGION}
+        - AWS_S3_BUCKET=${AWS_S3_BUCKET}
+        - NODE_ENV=${NODE_ENV}
+        - SMS_SERVICE_AUTH_URL=${SMS_SERVICE_AUTH_URL}
+        - SMS_SERVICE_CLIENT_ID=${SMS_SERVICE_CLIENT_ID}
+        - SMS_SERVICE_USERNAME=${SMS_SERVICE_USERNAME}
+        - SMS_SERVICE_PASSWORD=${SMS_SERVICE_PASSWORD}
+        - SMS_SERVICE_SCOPE=${SMS_SERVICE_SCOPE}
+        - SMS_SERVICE_SEND_URL=${SMS_SERVICE_SEND_URL}
+        - OPERADOR_PDE=${OPERADOR_PDE}
+        - ADMIN_PDE=${ADMIN_PDE}
+        - ADMINISTRADOR_EMPRESA=${ADMINISTRADOR_EMPRESA}
+        - SUPER_ADMIN_EMPRESA=${SUPER_ADMIN_EMPRESA}
+        - SOPORTE_APLICATIVO=${SOPORTE_APLICATIVO}
+        - SUPER_ADMIN_APLICATIVO=${SUPER_ADMIN_APLICATIVO}
+        - OWNER_APLICATIVO=${OWNER_APLICATIVO}
+    env_file:
+      - .env.prod
+    restart: always
+    expose:
+      - "3000"
+    depends_on:
+      - redis
+
   redis:
     image: redis:7
     container_name: prod-redis
     restart: always
-
-  nextjs:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: prod-nextjs
-    ports:
-      - "3000:3000"
-    env_file:
-      - .env.production
-    depends_on:
-      - redis
-
-  # nginx opcional si se usa para servir el front
-  nginx:
-    image: nginx:latest
-    container_name: prod-nginx
-    ports:
-      - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: redis-server /usr/local/etc/redis/redis.conf
+
+  nginx:
+    image: nginx:stable
+    container_name: prod-nginx
+    restart: always
+    ports:
+      - "80:80" # ⚠️ cambiar a 443 ya cuando pongamos certificados
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      # - ./certs:/etc/nginx/cert:ro # opcional, por si luego se agrega SSL
     depends_on:
-      - nextjs
+      - frontend
