--- a/next-app/package.json
+++ b/next-app/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -49,7 +50,9 @@
     "cookie": "^1.0.2",
     "country-flag-icons": "^1.5.19",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "fs": "^0.0.1-security",
+    "input-otp": "^1.4.2",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -60,13 +63,18 @@
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-leaflet": "^5.0.0",
     "react-phone-input-2": "^2.15.1",
+    "recharts": "^3.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.25.56",
     "zustand": "^5.0.5"
   },
